# mesh-loader

./: .cspell.json  .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md
.github/.cspell/: dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
example/: Cargo.toml  bevy.rs  kiss3d.rs
example/examples/: kiss3d.rs
examples/bevy/: Cargo.toml  assets
examples/bevy/src/: main.rs
examples/kiss3d/: Cargo.toml
examples/kiss3d/src/: main.rs
fuzz/: Cargo.toml  mtl.rs  obj.rs  stl.rs
fuzz/seeds/mtl/: seed.mtl
fuzz/seeds/stl/: ascii.stl
src/: common.rs  error.rs  lib.rs  loader.rs  trace.rs
src/collada/: effect.rs  error.rs  geometry.rs  image.rs  instance.rs  iter.rs  material.rs  mod.rs  scene.rs
src/common/: material.rs  mesh.rs  mod.rs  scene.rs  texture.rs  types.rs
src/stl/: error.rs  mod.rs  types.rs
src/utils/: arena.rs  bytes.rs  float.rs  fxhash.rs  hex.rs  int.rs  mod.rs  xml.rs
src/utils/float/: common.rs  decimal.rs  float.rs  lemire.rs  mod.rs  number.rs  parse.rs  slow.rs  table.rs
src/utils/tests/: float.rs  int.rs
tests/: assimp.rs  collada.rs
tests/shared/: assimp.rs
