[package]
name = "mesh-loader"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openrr/mesh-loader"
keywords = ["asset", "mesh", "stl", "collada"] # TODO: "obj"
categories = ["parser-implementations", "graphics"]
exclude = ["/.*", "/assets"]
description = """
Fast parser for 3D-model-formats.
"""

[workspace]
resolver = "2"
members = ["example"]

[features]
default = ["stl", "collada"]

# STL (.stl)
# https://en.wikipedia.org/wiki/STL_(file_format)
stl = ["rustc-hash"]
# COLLADA (.dae)
# https://en.wikipedia.org/wiki/COLLADA
collada = ["indexmap", "roxmltree"]
# TODO
# # Wavefront OBJ (.obj)
# # https://en.wikipedia.org/wiki/Wavefront_.obj_file
# obj = []

[dependencies]
# Used in all formats.
fast-float = "0.2"
memchr = "2.4"

# Used in STL parsing.
rustc-hash = { version = "1.1", optional = true }

# Used in COLLADA parsing.
indexmap = { version = "1.5.2", optional = true, features = ["std"] }
roxmltree = { version = "0.15", optional = true }

[dev-dependencies]
