[package]
name = "mesh-loader"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
license = "Apache-2.0"
repository = "https://github.com/openrr/mesh-loader"
keywords = ["asset", "mesh", "stl", "collada"] # TODO: "obj"
categories = ["parser-implementations", "graphics"]
exclude = ["/.*", "/assets"]
description = """
Fast parser for 3D-model-formats.
"""

[features]
default = ["stl", "collada"]

# STL (.stl)
# https://en.wikipedia.org/wiki/STL_(file_format)
stl = ["memchr"]
# COLLADA (.dae)
# https://en.wikipedia.org/wiki/COLLADA
collada = ["roxmltree"]
# TODO
# # Wavefront OBJ (.obj)
# # https://en.wikipedia.org/wiki/Wavefront_.obj_file
# obj = []

[dependencies]
# Used in all formats.
fast-float = "0.2"

# Used in STL parsing.
memchr = { version = "2.4", optional = true }

# Used in COLLADA parsing.
roxmltree = { version = "0.19", optional = true }

[dev-dependencies]
anyhow = "1"
assimp = "0.3"
duct = "0.13"
fastrand = "2"
fs-err = "2"
quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + lower MSRV
walkdir = "2"

[lints]
workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
