[package]
name = "example"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
mesh-loader = { path = ".." }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
kiss3d = "0.35"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter"] }
