[package]
name = "bevy-example"
edition = "2021"

[dependencies]
mesh-loader = { path = "../.." }

anyhow = "1"
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "tonemapping_luts",
    "jpeg",
    "x11",
] }
bevy_ecs = "0.12"
lexopt = "0.3"

[lints]
workspace = true
